<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CalculateActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/weddingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wedding_str"
        android:textAlignment="center"
        android:layout_margin="@dimen/default_margin"
        />

    <EditText
        android:id="@+id/weddingEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/weddingText"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:hint="@string/wedding_edit_text"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/weddingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weddingEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:ems="10"
        android:onClick="szamolas"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/weddingPrizeTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/weddingButton"
        android:textAlignment="center"
        android:text="Befizetendo 0FT"/>

</RelativeLayout>